--- a/EcommerceProject/Views/Cart/ShoppingSearch.cshtml
+++ b/EcommerceProject/Views/Cart/ShoppingSearch.cshtml
@@ -66,7 +66,7 @@
                     @Html.DisplayFor(modelItem => item.tax)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.img)
+                    <img width="50" height="50" src="@item.img.ToString()" alt="pic" asp-append-version="true"/>
                 </td>
                 <td>
                     <a asp-action="AddToCart" asp-route-id="@item.id">Add To Cart</a> |
