--- a/EcommerceProject/Views/Cart/addToCart.cshtml
+++ b/EcommerceProject/Views/Cart/addToCart.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.img)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.img)
+            <img width="100" height="100" src="@Model.img.ToString()" alt="pic" asp-append-version="true"/>
         </dd>
     </dl>
 </div>
