--- a/EcommerceProject/Views/Products/Details.cshtml
+++ b/EcommerceProject/Views/Products/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.img)
         </dt>
         <dd class = "col-sm-10">
-            <img src="~/Images.Air1Jordan.png" asp-append-version="true"/>
+            <img width="100" height="100" src="@Model.img.ToString()" alt="pic" asp-append-version="true"/>
         </dd>
     </dl>
 </div>
