--- a/EcommerceProject/Views/Products/Edit.cshtml
+++ b/EcommerceProject/Views/Products/Edit.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="img" class="control-label"></label>
-                <input asp-for="img" class="form-control" />
+                <select asp-for="img" asp-items="ViewBag.imgs" class="form-control"></select>
                 <span asp-validation-for="img" class="text-danger"></span>
             </div>
             <div class="form-group">
