--- a/EcommerceProject/Views/Products/Index.cshtml
+++ b/EcommerceProject/Views/Products/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<p>
+    <a asp-action="Upload">Upload Photo</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -52,7 +55,7 @@
                 @Html.DisplayFor(modelItem => item.tax)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.img)
+                <img width="50" height="50" src="@item.img.ToString()" alt="pic" asp-append-version="true"/>
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
